<resources>
    <string name="app_name">Smart Teacher</string>
    <string name="action_settings">Settings</string>
    <string name="ERROR_TITLE_NO_INTERNET_CONNECTIVITY">Unable to establish connection with Server. Please ensure Wi-Fi/ Cellular Data is on.</string>
    <string name="msg_the_request_timed_out">Unable to establish connection with Server. Please try again later or contact customer care.</string>
    <string name="ERROR_HTTP_COM_NO_CONTENT">No content received from server.</string>
    <string name="ERROR_HTTP_COMM_ERR_BAD_REQUEST">Requested operation is invalid.</string>
    <string name="ERROR_HTTP_COMM_ERR_UNAUTHORIZED">Authentication failed. Please try again later or contact customer care.</string>
    <string name="ERROR_HTTP_COMM_ERR_FORBIDDEN">Access to requested resource is not allowed.</string>
    <string name="ERROR_HTTP_COMM_ERR_NOT_FOUND">The requested resource is not found.</string>
    <string name="ERROR_HTTP_INTERNAL_SERVER_ERROR">An internal server error occurred while processing the request. Please try again.</string>
    <string name="ERROR_HTTP_COMM_ERR_BAD_GETWAY">Unable to establish connection with Server. Please try again later or contact customer care.</string>
    <string name="ERROR_HTTP_COMM_ERR_SERVICE_UNAVAILABLE">The server is currently unable to handle the request at this moment. Please try again.</string>
    <string name="ERROR_DESC_NOT_FOUND">Unable to establish connection with Server. Please try again later or contact customer care.</string>

    <string name="network_not_available">Please enable your mobile data or WIFI connection</string>
    <string name="fill_all_fields">Please Fill all the fields</string>
    <string name="network_available">Network available</string>
    <string name="no_students_available">No students available</string>
    <string name="select_activity">Please Select Activity</string>
    <string name="select_subject">Please Select Subject</string>

    <string name="no_Blue_Point_available">No blue points log available</string>
    <string name="no_Sponsor_Point_available">No Sponsor are available</string>
    <string name="no_Sponsor_Point">Sponsor Suggested successfuly</string>
    <string name="accept_request">Request Accepted</string>
    <string name="select_valid_point">Select Valid Point</string>
    <string name="point_assign_successfully">Points successfully assigned</string>
    <string name="point_is_not_avaliable">You do not have point to assign</string>
    <string name="no_activites_available">No Activites available</string>
    <string name="pointsno">insufficient points to assign</string>
    <string name="coupon_buy">Coupon Buy successfully</string>
    <string name="coupon_add">Coupon Added to cart</string>
    <string name="coupon_delete">Coupon deleted successfully</string>
    <string name="coupon_buy_toast">Coupon Added to cart successfully</string>
    <string name="coupon_buy_unsuccessful">Sorry...You do not have sufficient points to buy coupon!</string>
    <string name="no_coupon">Sorry...Their is no coupon for buy !</string>

    <string name="coupon_add_confirm">Coupon Buy Successfulyl</string>
    <string name="coupon_confirm">Coupon Buy not Successfulyl</string>
    <string name="map_toast">Under Development</string>
    <string name="invalid_input"> Please Fill All The Fields..!!</string>
    <string name="no_point_to_asign">You do not have sufficient point to assign...! </string>

    <string name="str_no_login_response">Some problem occured during logging in. Please check username and password.</string>
    <string name="add_to_cart">Coupon Added To Cart</string>
    <string name="pointshare">Point Share Successfully..!!</string>
    <string name="generate_coupon">You Do not have sufficient point to generate coupon..!!</string>
    <string name="less_green_point">You Do not have sufficient point to assign..!!</string>
    <string name="generate_generated_coupon">Coupon Generated successfully..!!</string>
    <string name="suggest_coupon">Sponsor List Received successfully..!!</string>
    <string name="share_point">You Do not have sufficient point to share..!!</string>
    <string name="Purchase_Points">You Do not have sufficient point to purchase point..!!</string>
    <string name="Purchase_oints">Purchase Successfully..!!</string>
    <string name="Request_Accept">Request Accepted Successfully..!!</string>
    <string name="Request_Decline">Request Decline Successfully..!!</string>
    <string name="Request_send">Request Send Successfully..!!</string>
    <string name="Request_send_problem">There is some problem to send request..!!</string>
    <string name="Request_send_already_exists">user already exists..!!</string>
    <string name="Request_Accepted">Request Accepted..!!</string>
    <string name="Request_notAccepted">insufficient points..!!</string>

    <string name="Request_send_invalid_input">invalid input Please check it"..!!</string>

    <string name="Login_Conflict_Occur">Login conflict occur</string>

    <!--drawer strings-->
    <string name="str_my_points">My Points</string>
    <string name="str_student_list">Student List</string>
    <string name="str_reward_point_log">Reward Point Log</string>
    <string name="str_my_subject">My Subject</string>
    <string name="str_assign_points">Assign Points</string>
    <string name="str_coupon">Coupon</string>
    <string name="str_logout">Logout</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="drawer_open">Open drawer</string>

    <string name="drawer_close">Close drawer</string>
    <string name="FACEBOOK_APP_ID">534128653593939</string>
    <!--fonts-->
    <string name="calibri">calibri.ttf</string>.
    <string name="fontawesome_webfont">fontawesome-webfont.ttf</string>
    <string name="lato_bold">lato-bold.ttf</string>
    <string name="lato_regular">Lato-Regular.ttf</string>


    <!--fontawesome strings-->
    <string name="circle_filled">&#xf111;</string>
    <string name="user">&#xf007;</string>
    <string name="facebook">&#xf09a;</string>
    <string name="twitter">&#xf099;</string>
    <string name="Circle">&#xf10c;</string>

    <!--login screen-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="MemberLogin">Member Login</string>
    <string name="Register">Register</string>
    <string name="arrawback">&#xf060;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sponsor_log">Map</string>

</resources>
